--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/mattiaronzi/tripMaps/issues"
   },
-  "homepage": "https://github.com/mattiaronzi/tripMaps#readme"
+  "homepage": "https://github.com/mattiaronzi/tripMaps#readme",
+  "dependencies": {
+    "fs-extra": "^7.0.0",
+    "jszip": "^3.1.5",
+    "unzip": "^0.1.11",
+    "yauzl": "^2.10.0"
+  }
 }
