--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "fs-extra": "^7.0.0",
     "jszip": "^3.1.5",
+    "underscore": "^1.9.1",
     "unzip": "^0.1.11",
+    "uuid": "^3.3.2",
     "yauzl": "^2.10.0"
   }
 }
