--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/mattiaronzi/tripMaps#readme",
   "dependencies": {
     "fs-extra": "^7.0.0",
+    "graceful-fs": "^4.1.11",
     "jszip": "^3.1.5",
     "underscore": "^1.9.1",
     "unzip": "^0.1.11",
